--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,87 +1,33 @@
-/* BOX-SIZING */
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
-/* HTML / BODY */
-html {
-  height: 100%;
-  overflow-x: hidden; /* предотвращаем горизонтальную прокрутку */
+html, body {
+    margin: 0;
+    padding: 0;
 }
 
-body {
-  min-inline-size: 375px;
-  max-inline-size: 1440px;
-  margin: 0 auto;
-  padding: 0;
-  height: 100%;
-  font-family: var(--font);
-  font-size: var(--font-size);
-  line-height: var(--line-height);
-  background-color: var(--sub-text-color);
-  color: var(--text-color);
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+img {
+    display: block;
+    max-width: 100%;
 }
 
-/* Типографика - сбросы */
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0;
-}
-
-/* Списки */
 ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+    list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
-/* Элементы управления */
-button,
-a {
-  color: currentColor;
-  font-family: inherit;
-  font-size: inherit;
-  line-height: inherit;
-  background: none;
-  border: none;
-  text-decoration: none;
+h1, h2, h3, p {
+    margin: 0;
+    padding: 0;
 }
 
-/* Контейнер */
-.container {
-  width: 100%;
-  max-width: var(--container-max);
-  margin-left: auto;
-  margin-right: auto;
-  padding-inline: var(--gutter);
-}
-
-/* Визуально скрытый текст для доступности */
-.visually-hidden {
-  position: absolute !important;
-  height: 1px;
-  width: 1px;
-  overflow: hidden;
-  clip: rect(1px, 1px, 1px, 1px);
-  white-space: nowrap;
-}
-
-/* Основной фон страницы */
-.page {
-  min-inline-size: 375px;
-  width: 100%;
-  background-image: var(--background-image);
-  background-position: center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-attachment: fixed; /* фиксированный фон */
+button {
+    font: inherit;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
