--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,16 +1,13 @@
 @font-face {
-  font-family: "Inter-Variable";
-  src: 
-    local("Inter-Variable"),
-    url("../fonts/Inter-Variable.woff2") format("woff2 supports variations"),
-    url("../fonts/Inter-Variable.woff2") format("woff2-variations");
-  font-weight: 400 785;
+  font-family: 'IBM Plex mono';
+  src: url(./IBMPlexMono-Regular.woff) format('woff');
+  font-weight: normal;
   font-display: swap;
 }
 
 @font-face {
-  font-family: "PressStart2P";
-  src: url("../fonts/PressStart2P-Regular.woff") format("woff");
-  font-weight: 400;
+  font-family: 'IBM Plex mono';
+  src: url(./IBMPlexMono-Bold.woff) format('woff');
+  font-weight: bold;
   font-display: swap;
 }
