--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,33 +1,43 @@
+/* Глобальные стили для проекта */
+
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html, body {
-    margin: 0;
-    padding: 0;
+body {
+ 
+  min-inline-size: 375px;
+  max-inline-size: 1440px;
+  margin: 0 auto;
 }
 
-img {
-    display: block;
-    max-width: 100%;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
 }
 
 ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-h1, h2, h3, p {
-    margin: 0;
-    padding: 0;
+picture {
+  margin: 0;
+  padding: 0;
 }
 
-button {
-    font: inherit;
-    background: none;
-    border: none;
-    cursor: pointer;
+button,
+a {
+  line-height: inherit;
+  font-family: inherit;
+  font-size: inherit;
+  color: currentColor;
 }
