--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,10 +1,24 @@
+/*
+  Переменные для вашего проекта
+  и их переопределение под различные устройства
+*/
 :root {
-  --bg-color: #000028;
-  --text-color: #F1B2CE;
-  --accent-color: #FF0070;
-  --title-color: #DB00FF;
-
-  --bg-image: url("../images/cover-image-dark.png");
-
-  --font-main: "IBM Plex Mono", monospace;
+  --font-family: "IBM Plex Mono", monospace;
+  --heading-text: #ffc2e6;
+  --accent-color: #ff8dcb;
+  --border-color: #353430;
+  --border-bottom: #353430;
+  --text-color: #353430;
+  --bg-color: #fff1f7;
+  --subtitle-color: #353430;
+  --bg-image: url(../images/cover-image-light.png);
+  --secondary-color: var(--color-black, #35343040);
+  --main-text-color: #353430;
+  --article-title-color: var(--main-text-color);
+  --section-title-color: var(--main-text-color);
+  --link-shadow: var(--title-color);
+  --rec-color: var(--background-color);
+}
+.decor {
+  display: none;
 }
